--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BEM Project</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
-    <div class="header">
+<body class="page">
+    <div class="page__header">
         <div class="header__logo">My Logo</div>
-        <nav class="header__nav">
-            <ul class="header__list">
-                <li class="header__item"><a class="header__link" href="#">Home</a></li>
-                <li class="header__item"><a class="header__link" href="#">About</a></li>
-                <li class="header__item"><a class="header__link" href="#">Contact</a></li>
+        <nav class="page__header__nav">
+            <ul class="page__header-list">
+                <li class="page__header-list-item"><a class="page__header-list-item-link" href="#">Home</a></li>
+                <li class="page__header-list-item"><a class="page__header-list-item-link" href="#">About</a></li>
+                <li class="page__header-list-item"><a class="page__header-list-item-link" href="#">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -21,6 +21,7 @@
         <h1 class="content__title">Welcome to My BEM Project</h1>
         <p class="content__text">This is a sample page created with BEM
             methodology and modern CSS practices.</p>
+        <button class="button-primary" type="button">Hi!</button>
     </div>
     <section class="comment">
         <p class="comment__text">Leave your comment</p>
